--- a/views/new.ejs
+++ b/views/new.ejs
@@ -17,6 +17,14 @@
             <label for="release"> Game Release: </label>
             <input id="release" name="release" type="text" />
         </div>
+        <div>
+            <label for="image"> Game Image: </label>
+            <input id="text" name="image" type="text"/>
+        </div>
+        <div>
+            <label for="price"> Game Price: </label>
+            <input id="number" name="price" type="text"/>
+        </div>
         <input type="submit" value="Create new game">
     </form>
 </body>
