--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
             <% const game = games[i] %>
             <div>
                 <ul class="games">
-                    <li class="game"> <%= game.title %>
+                    <li class="game"><a href="/games/<%= game._id %>"><%= game.title %></a>
                     <p> <img src="<%= game.image %>" alt="<%= game.name %>"/> </p> </li>
                 </ul>
             </div>
