--- a/views/show.ejs
+++ b/views/show.ejs
@@ -10,6 +10,7 @@
     <h1>Show Page</h1>
     <h2><%= oneGame.tltle %></h2>
     <small><%= oneGame.release %></small>
+    <h3><%= oneGame.price %></h3>
     <img class="game-image" src="<%= oneGame.image %>" alt="<%=oneGame.title %>"/>
     <div>
         <a href="/games/<%= oneGame._id %>/edit">Edit <%= oneGame.title %></a>
