add delete button on show.ejs

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -15,5 +15,8 @@
     <div>
         <a href="/games/<%= oneGame._id %>/edit">Edit <%= oneGame.title %></a>
     </div>
+    <form method="POST" action="/games/<%= oneGame._id%>?_method=DELETE">
+        <input type="submit" value="Delete Game"/>
+    </form>
 </body>
 </html>
