--- a/views/show.ejs
+++ b/views/show.ejs
@@ -36,6 +36,9 @@
             <div>
                 <h3>Rating: <%= reviews[i].rating %> </h3>
                 <p> <%= reviews[i].content %> </p>
+                <form action="/reviews/<%=reviews[i]._id%>?_method=DELETE" method="POST">
+                <input type="submit" value="delete review" />
+                </form>
             </div>
         <% } %>
     </section>
