--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,12 @@
     <title>Game Index</title>
 </head>
 <body>
+    <nav class="navbar">
+        <div>
+            <a href="/games">Game Library</a>
+            <a href="/games/new">Add New Game</a>
+        </div>
+    </nav>
     <section>
         <h1>All Games</h1>
     </section>
