--- a/views/show.ejs
+++ b/views/show.ejs
@@ -8,6 +8,12 @@
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar">
+        <div>
+            <a href="/games">Game Library</a>
+            <a href="/games/new">Add New Game</a>
+        </div>
+    </nav>
     <h1>Show Page</h1>
     <h2><%= oneGame.tltle %></h2>
     <small><%= oneGame.release %></small>
