--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,6 +8,12 @@
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar">
+        <div>
+            <a href="/games">Game Library</a>
+            <a href="/games/new">Add New Game</a>
+        </div>
+    </nav>
     <h1>New Game</h1>
     <form method="POST" action="/games">
         <div>
