--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,6 +8,12 @@
     <title>Game Edit</title>
 </head>
 <body>
+    <nav class="navbar">
+        <div>
+            <a href="/games">Game Library</a>
+            <a href="/games/new">Add New Game</a>
+        </div>
+    </nav>
     <h1>Edit Page | <%= game.title%></h1>
     <div>
         <form method="POST" action="/games/<%= game._id %>?_method=PUT">
