--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
         </div>
     </nav>
     <section>
-        <h1>All Games</h1>
+        <h1>Condensation</h1>
     </section>
     <div>
         <% for(let i = 0; i < games.length; i++) { %>
