--- a/views/show.ejs
+++ b/views/show.ejs
@@ -16,7 +16,7 @@
     </nav>
     <h2><%= oneGame.title %></h2>
     <small><%= oneGame.release %></small>
-    <h3><%= oneGame.price %></h3>
+    <h3>$<%= oneGame.price %></h3>
     <img class="game-image" src="<%= oneGame.image %>" alt="<%=oneGame.title %>"/>
     <div>
         <a href="/games/<%= oneGame._id %>/edit">Edit <%= oneGame.title %></a>
