--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
             <div>
                 <ul class="games">
                     <li class="game">
-                    <p><a href="/games/<%= game._id %>"><img src="<%= game.image %>" alt="<%= game.name %>"/> </p></a> </li>
+                    <p><a href="/games/<%= game._id %>"><img id="index" src="<%= game.image %>" alt="<%= game.name %>"/> </p></a> </li>
                 </ul>
             </div>
         <% } %>
