--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,11 +1,16 @@
-img {
+#index {
     width: 20vw;
     height: 25vw;
     border-radius: 5%;
 }
 
-img:hover {
+#index:hover {
     transform: scale(1.2);
+}
+
+.game-image {
+    width: 20vw;
+    height: 25vw;
 }
 
 body {
@@ -43,4 +48,34 @@ a {
 
 #title {
     font-size: 36px;
+}
+
+.show {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-between;
+    margin: 10vw;
+    padding: 10vw;
+}
+
+h2 {
+    font-size: 24px;
+    align-self: flex-start;
+    padding: 10px;
+}
+
+.reviews {
+    display: flex;
+    flex-direction: column;
+}
+
+#review {
+    padding: 10px;
+    margin: 10px;
+    border: 2px solid #63567a;
+}
+
+#review-form {
+    padding: 10px;
 }
