--- a/views/show.ejs
+++ b/views/show.ejs
@@ -22,9 +22,11 @@
     <div>
         <a href="/games/<%= oneGame._id %>/edit">Edit <%= oneGame.title %></a>
     </div>
+    <div id="game-delete">
     <form method="POST" action="/games/<%= oneGame._id%>?_method=DELETE">
         <input type="submit" value="Delete Game"/>
     </form>
+    </div>
     </div>
 
     <section class="reviews">
