--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -19,6 +19,11 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
+.index-body {
+    background-color: #230e42;
+    color: azure;
+}
+
 ul {
     list-style-type: none;
 }
@@ -38,6 +43,7 @@ a {
     color: aliceblue;
 }
 
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -46,13 +52,17 @@ a {
     color: white;
 }
 
-#title {
+.logo, #title {
+    width: 60px;
+    height: 60px;
+    align-self: flex-start;
+    justify-self: flex-start;
     font-size: 36px;
 }
 
 .show {
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
     justify-content: center;
     align-content: space-between;
     margin: 10vw;
@@ -78,4 +88,24 @@ h2 {
 
 #review-form {
     padding: 10px;
+}
+
+input {
+    align-self: flex-end;
+    font-size: 12px;
+    background-color: #63567a;
+    color: white;
+    padding: 10px 25px;
+    text-align: center;
+    display: inline-block;
+    text-decoration: none;
+    border: 0px;
+    width: max-content;
+    transition: all 0.3s 0s ease-in-out;
+}
+
+input:hover {
+    transform: scale(1.04, 1);
+    background-color: #5e1b16;
+    text-decoration: none;
 }
