--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,21 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/main.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Condensation</title>
 </head>
 <body>
     <nav class="navbar">
         <div>
-            <div id="title">CONDENSATION</div>
+            <img class="logo" src="https://cdn.discordapp.com/attachments/663490535402504225/969665723951632415/Untitled_design_2.png"/><div id="title">CONDENSATION</div>
             <a href="/games">Game Library</a> |
             <a href="/games/new">Add New Game</a>
         </div>
     </nav>
-    <section>
-        <h1>Condensation</h1>
-    </section>
-    <div>
+    <div class="index-body">
         <% for(let i = 0; i < games.length; i++) { %>
             <% const game = games[i] %>
             <div>
@@ -30,8 +26,6 @@
             </div>
         <% } %>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 </html>
