add title to ejs pages

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -10,6 +10,7 @@
 <body>
     <nav class="navbar">
         <div>
+            <img class="logo" src="https://cdn.discordapp.com/attachments/663490535402504225/969665723951632415/Untitled_design_2.png"/><div id="title">CONDENSATION</div>
             <a href="/games">Game Library</a> | 
             <a href="/games/new">Add New Game</a>
         </div>
