--- a/views/new.ejs
+++ b/views/new.ejs
@@ -34,5 +34,11 @@
         </div>
         <input type="submit" value="Create new game">
     </form>
+
+    <footer>
+        <div class="footer">
+            <img class="logo" src="https://cdn.discordapp.com/attachments/663490535402504225/969665723951632415/Untitled_design_2.png"/> @ 2022 Jonathan & Megan, Inc.
+        </div>
+    </footer>
 </body>
 </html>
