--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,8 @@
+#page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
 #index {
     width: 20vw;
     height: 25vw;
@@ -17,13 +22,15 @@
 
 body {
     background-color: #230e42;
-    color: azure;
+    color: rgb(255, 255, 255);
     font-family: 'Raleway', sans-serif;
 }
 
 .index-body {
     background-color: #230e42;
-    color: azure;
+    color: rgb(3, 34, 34);
+    padding-bottom: 2.5rem;
+    overflow: auto;
 }
 
 ul {
@@ -114,7 +121,11 @@ input:hover {
 
 .footer {
     background-color: #4d3369;
-    box-sizing: border-box;
-    position: relative;
+    position: sticky;
     float: right;
+    bottom: 0;
+    margin-top: -70px;
+    width: 100%;
+    height: 70px;
 }
+
