--- a/views/show.ejs
+++ b/views/show.ejs
@@ -45,7 +45,7 @@
 
         <% for(let i = 0; i < reviews.length; i++) { %>
             <div id="review">
-                <h3>Rating: <%= reviews[i].rating %> </h3>
+                <h3>Rating: <%= reviews[i].rating %> /5</h3>
                 <hr>
                 <p> <%= reviews[i].content %> </p>
                 <hr>
@@ -61,6 +61,6 @@
             <img class="logo" src="https://cdn.discordapp.com/attachments/663490535402504225/969665723951632415/Untitled_design_2.png"/> @ 2022 Jonathan & Megan, Inc.
         </div>
     </footer>
-    
+
 </body>
 </html>
