--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -20,6 +20,10 @@
     margin: 10vw;
 }
 
+#page-title {
+    font-size: 32px;
+}
+
 body {
     background-color: #230e42;
     color: rgb(255, 255, 255);
@@ -31,6 +35,7 @@ body {
     color: rgb(255, 255, 255);
     padding-bottom: 2.5rem;
     overflow: auto;
+    line-height: 5vh;
 }
 
 ul {
@@ -62,7 +67,7 @@ a {
     color: white;
 }
 
-.logo, #title {
+.logo {
     width: 60px;
     height: 60px;
     align-self: flex-start;
@@ -124,7 +129,7 @@ input:hover {
     position: sticky;
     float: right;
     bottom: 0;
-    margin-top: -70px;
+    margin-top: 20em;
     width: 100%;
     height: 70px;
 }
